app/assets/stylesheets/application.css.scss
/* ...
*= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
*/


@font-face {
  font-family: "Blue Highway";
  src: url("/bluehighwaybd.ttf") format("truetype");
}

@font-face {
  font-family: 'PT Sans', sans-serif;
}

body {
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  margin-top: 60px;
  font-size: 14px;
  font-family: "Helvetica Nueue",Arial,Verdana,sans-serif;
  background-image: url(http://i.imgur.com/wJm4yMq.jpg);
  background-size: 100%;
}


p, a, form {
  font-size: 20px;
  font-family: 'PT Sans', sans-serif;
  color: black;
}

h1 {
  font-family: 'PT Sans', sans-serif;
}

nav {
  font-size: 20px;
  margin-top: -40px;
  font-family: 'PT Sans', sans-serif;
}


a.navbar-brand {
  font-size: 90px;
  font-family: "Blue Highway";
  color: black;
}


div.form-group {
  padding: 8px;
  width: 250px;
}

.navbar-header {
  height: 50px;
}

.navbar-link:hover{
  color: #008080;
}

img#moth {
  height: 100%;
  width: 20%;
}

img#scimoth {
  right: 0px;
  bottom: 0px;

}

.card-top-container {
  width: 600px;
}

.synopsis {
  background-image: url(http://i668.photobucket.com/albums/vv44/GOULDandy1/FilmStrip2A.jpg);
  background-size: 100% 100%;
  padding-top: 23%;
  padding-bottom: 15%;
  padding-left: 10%;
  padding-right: 10%;
  height: 500px;
}

.btn-group {
  width: 100%;
}


.user_info {
  text-align: center;
}

.profile_ideas {
  text-align: left;
}


/*Leaderboard css*/
.leaderboard-container {
  margin-left: 5%;
  margin-right: 5%;
}

td, th {
  border: solid 3px black;
  padding: 5px;
}

th, td {
  font-size: 20px;
}



p.header {
  color: #8B0000;
}

#info-synopsis {
  font-size: 20px;
}


/*Pitch your idea css*/
.pitch-container {
  width: 1000px;
  margin-top: 5%;
  margin-left: 5%;
}



#movie_idea_synopsis {
  background-color: rgba(227,227,227,0.5);
  width: 500px;

}

#movie_idea_more_info {
  background-color: rgba(227,227,227,0.5);
  width: 500px;

}



/*Details/More Info css*/
p.details-synopsis {
  font-size: 20px;
  background-color: rgba(227,227,227,0.8);
}

p.details-moreInfo {
  font-size: 20px;
  background-color: rgba(227,227,227,0.8);
}

img {
  height: 100%;
  width: 100%;
  max-height: 350px;
  max-width: 250px;
}

form.back-btn {
  margin-top: 10px;
  padding-left: 0;
  float: left;
}

#back-btn {
  width: 100%;
}


/* entire container, keeps perspective */
.card-container {
    -webkit-perspective: 800px;
   -moz-perspective: 800px;
     -o-perspective: 800px;
        perspective: 800px;
        margin-bottom: 30px;

}
/* flip the pane when hovered */
.card-container:hover .card, .card-container.hover .card {
  -webkit-transform: rotateY( 180deg );
-moz-transform: rotateY( 180deg );
 -o-transform: rotateY( 180deg );
    transform: rotateY( 180deg );

}

.card-container.static:hover .card, .card-container.static.hover .card {
  -webkit-transform: none;
-moz-transform: none;
 -o-transform: none;
    transform: none;
}
/* flip speed goes here */
.card {
   -webkit-transition: -webkit-transform .5s;
   -moz-transition: -moz-transform .5s;
     -o-transition: -o-transform .5s;
        transition: transform .5s;
-webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
     -o-transform-style: preserve-3d;
        transform-style: preserve-3d;
  position: relative;
}

/* hide back of pane during swap */
.front, .back {
  -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
     -o-backface-visibility: hidden;
        backface-visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
  background-color: #FFF;
    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.14);
}

/* front pane, placed above back */
.front {
  z-index: 2;
}

/* back, initially hidden pane */
.back {
    -webkit-transform: rotateY( 180deg );
   -moz-transform: rotateY( 180deg );
     -o-transform: rotateY( 180deg );
        transform: rotateY( 180deg );
        z-index: 3;
}

/*        Style       */


.card{
    background: none repeat scroll 0 0 #FFFFFF;
    border-radius: 4px;
    color: #444444;
}
.card-container, .front, .back {
  width: 100%;
  border-radius: 4px;
}
.card .cover{
    height: 105px;
    overflow: hidden;
    border-radius: 4px 4px 0 0;
}
.card .cover img{
    width: 100%;
}
.card .user{
    border-radius: 50%;
    display: block;
    height: 120px;
    margin: -55px auto 0;
    overflow: hidden;
    width: 120px;
}
.card .user img{
    background: none repeat scroll 0 0 #FFFFFF;
    border: 4px solid #FFFFFF;
    width: 100%;
}

.card .content{
    background-color: rgba(0, 0, 0, 0);
    box-shadow: none;
    padding: 10px 20px 20px;
}
.card .content .main {
    min-height: 160px;
}
.card .back .content .main {
    height: 215px;
}
.card .name {
    font-size: 22px;
    line-height: 28px;
    margin: 10px 0 0;
    text-align: center;
    text-transform: capitalize;
}
.card h5{
    margin: 5px 0;
    font-weight: 400;
    line-height: 20px;
}
.card .profession{
    color: #999999;
    text-align: center;
    margin-bottom: 20px;
}
.card .footer {
    border-top: 1px solid #EEEEEE;
    color: #999999;
    margin: 30px 0 0;
    padding: 10px 0 0;
    text-align: center;
}
.card .footer .social-links{
    font-size: 18px;
}
.card .footer .social-links a{
    margin: 0 7px;
}
.card .header {
    padding: 15px 20px;
    height: 90px;
}
.card .motto{
    border-bottom: 1px solid #EEEEEE;
    color: #999999;
    font-size: 14px;
    font-weight: 400;
    padding-bottom: 10px;
    text-align: center;
}

/*      Just for presentation        */

.title{
    color: #506A85;
    text-align: center;
    font-weight: 300;
    font-size: 44px;
    margin-bottom: 90px;
    line-height: 90%;
}
.title small{
    font-size: 17px;
    color: #999;
    text-transform: uppercase;
    margin: 0;
}
.space-50{
    height: 50px;
    display: block;
}
.space-200{
    height: 200px;
    display: block;
}
.white-board{
    background-color: #FFFFFF;
    min-height: 200px;
    padding: 60px 60px 20px;
}
.ct-heart{
    color: #F74933;
}

 pre.prettyprint{
    background-color: #ffffff;
    border: 1px solid #999;
    margin-top: 20px;
    padding: 20px;
    text-align: left;
}
.atv, .str{
    color: #05AE0E;
}
.tag, .pln, .kwd{
     color: #3472F7;
}
.atn{
  color: #2C93FF;
}
.pln{
   color: #333;
}
.com{
    color: #999;
}


/*       Fix bug for IE      */

@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
    .front, .back{
        -ms-backface-visibility: visible;
        backface-visibility: visible;
    }

    .back {
        visibility: hidden;
        -ms-transition: all 0.2s cubic-bezier(.92,.01,.83,.67);
    }
    .front{
        z-index: 4;
    }
    .card-container:hover .back{
        z-index: 5;
        visibility: visible;
    }
}


.css-typing {
  width: 30em;
  white-space:nowrap;
  overflow:hidden;
  -webkit-animation: type 5s steps(50, end);
  animation: type 5s steps(50, end);
  font-family: 'PT Sans', sans-serif;
}

@keyframes type{
    from { width: 0; }
}

@-webkit-keyframes type{
    from { width: 0; }
}



/* ---------- LOGIN-FORM ---------- */

.login-container {
  left: 50%;
  position: fixed;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
      -ms-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
}

#login-form {
  width: 500px;
}

#login-form h3 {
  background-color: #282830;
  border-radius: 5px 5px 0 0;
  color: #fff;
  font-size: 14px;
  padding: 20px;
  text-align: center;
  text-transform: uppercase;

}

.input-form {
  width: 460px;
}

#login-form fieldset {
  background: #fff;
  border-radius: 0 0 5px 5px;
  padding: 20px;
  position: relative;
}


#login-form fieldset:before {
  background-color: #fff;
  content: "";
  height: 8px;
  left: 50%;
  margin: -4px 0px 0 -4px;
  position: absolute;
  top: 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 8px;
}



input {
  margin-top: 5px;
  padding: 8px;
  border-radius: 7px;
  background-color: #fff;
}

table {
  background-color: rgba(227,227,227,0.8);
}

